Varias mejoras de UI

--- a/src/app/customers/customers.component.html
+++ b/src/app/customers/customers.component.html
@@ -3,6 +3,8 @@
     buttonBackGroundColor="purple" 
     buttonLeft="10px" 
     buttonTop="10px" 
+    buttonHeight="50px"
+    buttonWidth="50px"
     routerLink="/home"
     [buttonIcon]="backIcon"
     >
