--- a/src/app/shared/floating-button/floating-button.component.html
+++ b/src/app/shared/floating-button/floating-button.component.html
@@ -7,6 +7,7 @@
 [style.bottom]="buttonBottom"
 [style.width]="buttonWidth"
 [style.height]="buttonHeight"
-[style.position]="buttonPosition">
+[style.position]="buttonPosition"
+[style.color]="buttonIconColor">
     <fa-icon [icon]="buttonIcon"></fa-icon>
 </button>
