--- a/src/app/works/works.component.html
+++ b/src/app/works/works.component.html
@@ -1,8 +1,10 @@
 <app-floating-button 
     buttonBorderColor="purple" 
     buttonBackGroundColor="purple" 
-    buttonLeft="10px" 
     buttonTop="10px" 
+    buttonLeft="10px" 
+    buttonHeight="50px"
+    buttonWidth="50px"
     routerLink="/home"
     [buttonIcon]="backIcon"
     >
