Añadido navbar y modal al no poder eliminarse cliente

--- a/src/app/customers/customers.component.html
+++ b/src/app/customers/customers.component.html
@@ -1,3 +1,5 @@
+<app-navbar selectedRoute="/clientes"></app-navbar>
+<!--
 <app-floating-button 
     buttonBorderColor="purple" 
     buttonBackGroundColor="purple" 
@@ -7,6 +9,6 @@
     buttonWidth="50px"
     routerLink="/home"
     [buttonIcon]="backIcon"
-    >
-</app-floating-button>
+    />
+-->
 <app-card-list [dataArray]="cardList"></app-card-list>
