--- a/src/app/works/works.component.html
+++ b/src/app/works/works.component.html
@@ -1,3 +1,5 @@
+<app-navbar selectedRoute="/trabajos"></app-navbar>
+<!--
 <app-floating-button 
     buttonBorderColor="purple" 
     buttonBackGroundColor="purple" 
@@ -9,5 +11,6 @@
     [buttonIcon]="backIcon"
     >
 </app-floating-button>
+-->
 
 <app-works-table [works]="works"></app-works-table>
