--- a/src/app/shared/confirmation-modal/confirmation-modal.component.html
+++ b/src/app/shared/confirmation-modal/confirmation-modal.component.html
@@ -1,4 +1,11 @@
-<h5 class="modal-title">{{title}}</h5>
-<div class="button-container">
-    <button (click)="confirmClick()" type="submit" class="btn btn-primary">Confirmar</button>
-</div>
+  <div class="modal-header">
+    <h5 class="modal-title">{{title}}</h5>
+    <button type="button" class="btn-close" data-bs-dismiss="modal" (click)="continueClick()" aria-label="Close"></button>
+  </div>
+  <div class="modal-body">
+    <p>{{description}}</p>
+  </div>
+  <div class="modal-footer">
+    <button type="button" class="btn btn-primary" (click)="continueClick()">Aceptar</button>
+  </div>
+
