--- a/src/app/shared/card-list/details-modal/details-modal.component.html
+++ b/src/app/shared/card-list/details-modal/details-modal.component.html
@@ -1,33 +1,49 @@
 
 <form>
+    <header>
+        <h5>
+            Detalle del cliente
+          </h5>
+    </header>
+    <body>
+        <div id="image-container">
+            <img class="card-img" src="{{card.image}}">
+        </div>
+        <div id="group-of-groups">
+            <div id="field-form" class="form-group"  >
+                
+                <label for="field1input">{{card.field1name}}</label>
+                <input type="field1" value="{{card.field1value}}" name="field1value" [(ngModel)]="card.field1value" [disabled]="!data.settingsPressed" class="form-control" id="field1input">
+                
+                <label for="field2input">{{card.field2name}}</label>
+                <input type="field2" value="{{card.field2value}}" name="field2value" [(ngModel)]="card.field2value" [disabled]="!data.settingsPressed" class="form-control" id="field2input">
+                
+                <label for="field3input">{{card.field3name}}</label>
+                <input type="field3" value="{{card.field3value}}" name="field3value" [(ngModel)]="card.field3value" [disabled]="!data.settingsPressed" class="form-control" id="field3input">
     
-    <div id="image-container">
-        <img class="card-img" src="{{card.image}}">
-    </div>
-    <div id="group-of-groups">
-        <div id="field-form" class="form-group"  >
-            
-            <label for="field1input">{{card.field1name}}</label>
-            <input type="field1" value="{{card.field1value}}" name="field1value" [(ngModel)]="card.field1value" [disabled]="!data.settingsPressed" class="form-control" id="field1input">
-            
-            <label for="field2input">{{card.field2name}}</label>
-            <input type="field2" value="{{card.field2value}}" name="field2value" [(ngModel)]="card.field2value" [disabled]="!data.settingsPressed" class="form-control" id="field2input">
-            
-            <label for="field3input">{{card.field3name}}</label>
-            <input type="field3" value="{{card.field3value}}" name="field3value" [(ngModel)]="card.field3value" [disabled]="!data.settingsPressed" class="form-control" id="field3input">
+                <label for="field4input">{{card.field4name}}</label>
+                <input type="field4" value="{{card.field4value}}" name="field4value" [(ngModel)]="card.field4value" [disabled]="!data.settingsPressed" class="form-control" id="field4input">
+    
+                <label for="field5input">{{card.field5name}}</label>
+                <input type="field5" value="{{card.field5value}}" name="field5value" [(ngModel)]="card.field5value" [disabled]="!data.settingsPressed" class="form-control" id="field5input">
+            </div>
+            <div id="upload-file-group" class="form-group" [hidden]="!data.settingsPressed">
+                <label for="input-upload-file">Seleccionar archivo</label>
+                <input type="file" class="form-control-file" accept=".jpg" id="input-upload-file" (change)="onChangeInput($event)">
+            </div>
+        </div>
 
-            <label for="field4input">{{card.field4name}}</label>
-            <input type="field4" value="{{card.field4value}}" name="field4value" [(ngModel)]="card.field4value" [disabled]="!data.settingsPressed" class="form-control" id="field4input">
-
-            <label for="field5input">{{card.field5name}}</label>
-            <input type="field5" value="{{card.field5value}}" name="field5value" [(ngModel)]="card.field5value" [disabled]="!data.settingsPressed" class="form-control" id="field5input">
-        </div>
-        <div id="upload-file-group" class="form-group" [hidden]="!data.settingsPressed">
-            <label for="input-upload-file">Seleccionar archivo</label>
-            <input type="file" class="form-control-file" accept=".jpg" id="input-upload-file" (change)="onChangeInput($event)">
-        </div>
-        <div class="button-container">
-            <button (click)="saveClick()" type="submit" [hidden]="!data.settingsPressed" class="btn btn-primary">Confirmar</button>
-        </div>
-    </div>
+        <app-floating-button 
+        buttonBorderColor="black" 
+        buttonBackGroundColor="green" 
+        buttonRight="10px" 
+        buttonBottom="10px" 
+        buttonWidth="50px"
+        buttonHeight="50px"
+        [buttonIcon]="checkIcon"
+        buttonPosition="absolute"
+        (click)="saveClick()"
+        />
+    </body>
+    
   </form>
