--- a/src/app/invoice-modal/invoice-modal.component.html
+++ b/src/app/invoice-modal/invoice-modal.component.html
@@ -1,19 +1,11 @@
-   
-<form>
+
+
+   <!-- invoicetype === 0 ? createWorkClick() : cambiarParams-->
+   <form>
     <header >
             <h5>          
                 Crear factura
             </h5>
-            <div class="div-class" >                
-                    <mat-radio-group name="radioInvoiceType" class="radio-invoice-type" [(ngModel)]="invoiceType">
-                        <mat-radio-button [value]="0"  style="margin: 10px;padding-left:120px;">
-                            Automático
-                        </mat-radio-button>
-                        <mat-radio-button [value]="1"  style="margin: 10px">
-                            Manual
-                        </mat-radio-button>
-                    </mat-radio-group>                
-            </div>
       </header>
     <body> 
         <app-floating-button 
@@ -26,53 +18,58 @@
               [buttonIcon]="cancelIcon"
               buttonPosition="absolute"
               (click)="closeClick()"
-        />       
-        <label [hidden]="!invoiceType" for="invoiceTextArea">Contenido factura: </label>
-        <textarea style="width:100%;" rows="5" cols="150" name="invoiceTextArea" [(ngModel)]="textArea" [hidden]="!invoiceType">
+        />
+        
+        <label hidden for="invoiceTextArea">Contenido factura: </label>
+        <textarea hidden style="width:100%;" rows="5" cols="150" name="invoiceTextArea" [(ngModel)]="textArea" >
 
         </textarea>
 
-        <div class="input-div">
-            <label [hidden]="!invoiceType" for="inputChargeReason">Razón cobro:</label>
-            <input name="inputChargeReason" [(ngModel)]="chargeReason" [hidden]="!invoiceType">
-
-            <label [hidden]="!invoiceType" for="price">Importe:</label>
-            <input name="price" type="number" [(ngModel)]="price" [hidden]="!invoiceType">
-
-            <label [hidden]="!invoiceType" for="ivaManual">Iva:</label>
-            <input name="ivaManual" type="number" [(ngModel)]="ivaManual" [hidden]="!invoiceType">
-        </div>
         <div class="form-group">
-            <label for="select-treatment" [hidden]="invoiceType" >Tratamiento:</label>
-                <mat-select [hidden]="invoiceType" [formControl]="treatment" name="select-treatment" class="form-control" id="select-treatment" #singleSelect>   
+            <label for="select-treatment" >Tratamiento:</label>
+                <mat-select [formControl]="treatment" name="select-treatment" class="form-control" id="select-treatment" #singleSelect>   
                     <mat-option *ngFor="let treatment of treatmentList" [value]="treatment">{{treatment}}</mat-option>                          
                 </mat-select>
         </div>
         
         <div class="form-group">
-            <label for="select-iva" [hidden]="invoiceType" >Iva:</label>
-                <mat-select [hidden]="invoiceType" [formControl]="iva" name="select-iva" class="form-control" id="select-iva" #singleSelect>   
+            <label for="select-iva" >Iva:</label>
+                <mat-select [formControl]="iva" name="select-iva" class="form-control" id="select-iva" #singleSelect>   
                     <mat-option *ngFor="let iva of ivaList" [value]="iva">{{iva}}</mat-option>                            
                 </mat-select>
         </div>
 
         <div class="form-group">
-            <label for="select-place-type" [hidden]="invoiceType" >Lugar:</label>
-            <mat-select [hidden]="invoiceType" [formControl]="placeType" name="select-place-type" class="form-control" id="select-place-type" #singleSelect>   
+            <label for="select-place-type" >Lugar:</label>
+            <mat-select [formControl]="placeType" name="select-place-type" class="form-control" id="select-place-type" #singleSelect>   
                 <mat-option *ngFor="let placeType of placeTypeList" [value]="placeType">{{placeType}}</mat-option>                          
             </mat-select>
         </div>
 
-    <app-floating-button 
-        buttonBorderColor="black" 
-        buttonBackGroundColor="green" 
-        buttonRight="10px" 
-        buttonBottom="10px" 
-        buttonWidth="50px"
-        buttonHeight="50px"
-        [buttonIcon]="checkIcon"
-        buttonPosition="absolute"
-        (click)="exportAsPDF()"
-    />
-    </body> 
+        <table class="table table-bordered">
+            <thead>
+              <tr>
+                <th scope="col">Concepto</th>
+                <th scope="col">Precio</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr *ngFor="let row of rows; let i = index">
+                <td width="650px">
+                    <textarea autosize style="width:100%;" name="invoiceTextArea{{i}}" [(ngModel)]="row.concept"></textarea>
+                </td>
+                <td width="50px">
+                    <input style="width: 100%" name="price{{i}}" type="number" [(ngModel)]="row.price">
+                </td>
+              </tr>
+             
+            </tbody>
+          </table>     
+          <button (click)="addNewRow()">Añadir concepto</button>
+          <div class="buttonDiv">
+            <button class="confirmButton" (click)="exportPDF()"><fa-icon [icon]="checkIcon"></fa-icon></button>
+          </div>
+
+        </body> 
+    
 </form>
