--- a/src/app/work-modal/work-modal.component.html
+++ b/src/app/work-modal/work-modal.component.html
@@ -26,7 +26,7 @@
     
       <div class="form-group">
         <label for="nameInput">Nombre del trabajo</label>
-        <input name="inputNameName" class="form-control" [(ngModel)]="work.name" [disabled]="type === 'view'" id="nameInput" value="{{work.name}}" placeholder="Nombre del trabajo">      
+        <input  maxlength="100" name="inputNameName" class="form-control" [(ngModel)]="work.name" [disabled]="type === 'view'" id="nameInput" value="{{work.name}}" placeholder="Nombre del trabajo">      
       </div>
 
       <div class="form-group">
