--- a/src/app/works-table/works-table.component.html
+++ b/src/app/works-table/works-table.component.html
@@ -21,7 +21,7 @@
     <table class="table table-hover">
         <thead>
         <tr>
-            <th scope="col">Id</th>
+            <th scope="col">Número factura</th>
             <th scope="col">Trabajo</th>
             <th scope="col">Ciudad</th>
             <th scope="col">Cliente</th>
