--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -12,6 +12,9 @@
         <li class="nav-item">
           <a [ngClass]="selectedRoute === '/trabajos' ? 'nav-link active' : 'nav-link'" href="/trabajos">Trabajos</a>
         </li>
+        <li class="nav-item">
+          <a [ngClass]="selectedRoute === '/facturas' ? 'nav-link active' : 'nav-link'" href="/facturas">Facturas</a>
+        </li>
       </ul>
       <form class="d-flex" role="search">
         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
