--- a/src/app/invoice-modal/invoice-modal.component.css
+++ b/src/app/invoice-modal/invoice-modal.component.css
@@ -63,3 +63,20 @@ textarea{
     margin-right:20px;
     bottom:10px
 }
+
+.invoiceButton{
+    z-index: 10;
+    align-items:center;
+    justify-content:center;
+    border-radius: 50%;
+    width:50px;
+    height:50px;
+    border-color:black;
+    background-color:purple;
+    color: white;
+    position:relative;
+    right:10px;
+    bottom:10px;
+    margin-right:20px;
+    bottom:10px
+}
