--- a/src/app/shared/confirmation-modal/confirmation-modal.component.html
+++ b/src/app/shared/confirmation-modal/confirmation-modal.component.html
@@ -1,6 +1,6 @@
   <div class="modal-header">
     <h5 class="modal-title">{{title}}</h5>
-    <button type="button" class="btn-close" data-bs-dismiss="modal" (click)="continueClick()" aria-label="Close"></button>
+    <button type="button" class="btn-close" data-bs-dismiss="modal" (click)="cancelClick()" aria-label="Close"></button>
   </div>
   <div class="modal-body">
     <p>{{description}}</p>
